# ai-evals

./: ai-eval-implementation-plan.md  ai-eval-pipeline-adaptive-intelligence.md  ai-eval-pipeline-consolidated.md  ai-eval-pipeline-developer-sdk.md  ai-eval-pipeline-unified-platform.md
aeval/: .env.example  README.md  aeval.yaml  aeval.yaml.example  docker-compose.yml
aeval/dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
aeval/datasets/: code-gen-v1.jsonl  factuality-test.jsonl  factuality-v1.jsonl  reasoning-test.jsonl  reasoning-v1.jsonl  safety-v1.jsonl
aeval/docs/: eval-authoring-guide.md  full-walkthrough.md  instruction-manual.md
aeval/evals/: factuality_test.py  reasoning_test.py  (+1 more)
aeval/sdk/: pyproject.toml
aeval/sdk/src/aeval/: __init__.py  cli.py  client.py  config.py
aeval/sdk/src/aeval/adapters/: ollama.py
aeval/sdk/src/aeval/commands/: ci.py  compare.py  contamination.py  health.py  init.py  models.py  registry.py  results.py  run.py  status.py
aeval/sdk/src/aeval/core/: contamination.py  dataset.py  eval.py  model.py  result.py  scorer.py  suite.py
aeval/sdk/src/aeval/scorers/: _utils.py  constraint_satisfaction.py  exact_match.py  field_extract.py  json_schema.py  llm_judge.py  multiple_choice.py  pii_leakage.py  rubrics.py  safety_refusal.py  semantic_similarity.py  tool_call_accuracy.py  toxicity.py
aeval/sdk/src/aeval/stats/: discrimination.py  significance.py
aeval/sdk/tests/: test_cli.py  test_client.py  test_dataset.py  test_eval_decorator.py  test_ollama_adapter.py  test_scorers.py  test_stats.py
(+91 files in other folders)
